Optimize for HF Spaces deployment

--- a/notebooks/tipm_demo.ipynb
+++ b/notebooks/tipm_demo.ipynb
@@ -19,10 +19,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "459bed4e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TIPM libraries imported successfully!\n"
+     ]
+    }
+   ],
    "source": [
     "# Import required libraries\n",
     "import pandas as pd\n",
@@ -59,19 +67,117 @@
    "execution_count": null,
    "id": "c9d81461",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Failed to initialize TIPMModel: 'PolicyLayerConfig' object has no attribute 'get'\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'PolicyLayerConfig' object has no attribute 'get'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[32]\u001b[39m\u001b[32m, line 7\u001b[39m\n\u001b[32m      4\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mconfig must be a TIPMConfig, got \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mtype\u001b[39m(config)\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m      6\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m----> \u001b[39m\u001b[32m7\u001b[39m     model = \u001b[43mTIPMModel\u001b[49m\u001b[43m(\u001b[49m\u001b[43mconfig\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m      8\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[32m      9\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mFailed to initialize TIPMModel:\u001b[39m\u001b[33m\"\u001b[39m, e)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/_TIPM/tipm/core.py:66\u001b[39m, in \u001b[36mTIPMModel.__init__\u001b[39m\u001b[34m(self, config)\u001b[39m\n\u001b[32m     63\u001b[39m \u001b[38;5;28mself\u001b[39m.logger = logging.getLogger(\u001b[34m__name__\u001b[39m)\n\u001b[32m     65\u001b[39m \u001b[38;5;66;03m# Initialize model layers\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m66\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_initialize_layers\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     68\u001b[39m \u001b[38;5;66;03m# Model state\u001b[39;00m\n\u001b[32m     69\u001b[39m \u001b[38;5;28mself\u001b[39m.is_trained = \u001b[38;5;28;01mFalse\u001b[39;00m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/_TIPM/tipm/core.py:74\u001b[39m, in \u001b[36mTIPMModel._initialize_layers\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m     72\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34m_initialize_layers\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[32m     73\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33;03m\"\"\"Initialize all 6 model layers\"\"\"\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m74\u001b[39m     \u001b[38;5;28mself\u001b[39m.policy_layer = \u001b[43mPolicyTriggerLayer\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mconfig\u001b[49m\u001b[43m.\u001b[49m\u001b[43mpolicy_config\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     75\u001b[39m     \u001b[38;5;28mself\u001b[39m.trade_flow_layer = TradeFlowLayer(\u001b[38;5;28mself\u001b[39m.config.trade_flow_config)\n\u001b[32m     76\u001b[39m     \u001b[38;5;28mself\u001b[39m.industry_layer = IndustryResponseLayer(\u001b[38;5;28mself\u001b[39m.config.industry_config)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/_TIPM/tipm/layers/policy_trigger.py:84\u001b[39m, in \u001b[36mPolicyTriggerLayer.__init__\u001b[39m\u001b[34m(self, config)\u001b[39m\n\u001b[32m     81\u001b[39m \u001b[38;5;28mself\u001b[39m.logger = \u001b[38;5;28mself\u001b[39m._setup_logging()\n\u001b[32m     83\u001b[39m \u001b[38;5;66;03m# Initialize components with error handling\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m84\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_initialize_components\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     86\u001b[39m \u001b[38;5;66;03m# State tracking\u001b[39;00m\n\u001b[32m     87\u001b[39m \u001b[38;5;28mself\u001b[39m.is_fitted = \u001b[38;5;28;01mFalse\u001b[39;00m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/_TIPM/tipm/layers/policy_trigger.py:157\u001b[39m, in \u001b[36mPolicyTriggerLayer._initialize_components\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m    154\u001b[39m \u001b[38;5;66;03m# Initialize TF-IDF vectorizer if sklearn available\u001b[39;00m\n\u001b[32m    155\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m HAS_SKLEARN:\n\u001b[32m    156\u001b[39m     \u001b[38;5;28mself\u001b[39m.tfidf_vectorizer = TfidfVectorizer(\n\u001b[32m--> \u001b[39m\u001b[32m157\u001b[39m         max_features=\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mconfig\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget\u001b[49m(\u001b[33m\"\u001b[39m\u001b[33mtfidf_max_features\u001b[39m\u001b[33m\"\u001b[39m, \u001b[32m1000\u001b[39m),\n\u001b[32m    158\u001b[39m         stop_words=\u001b[33m\"\u001b[39m\u001b[33menglish\u001b[39m\u001b[33m\"\u001b[39m,\n\u001b[32m    159\u001b[39m         ngram_range=(\u001b[32m1\u001b[39m, \u001b[32m3\u001b[39m),\n\u001b[32m    160\u001b[39m         lowercase=\u001b[38;5;28;01mTrue\u001b[39;00m,\n\u001b[32m    161\u001b[39m         strip_accents=\u001b[33m\"\u001b[39m\u001b[33municode\u001b[39m\u001b[33m\"\u001b[39m,\n\u001b[32m    162\u001b[39m     )\n\u001b[32m    163\u001b[39m     \u001b[38;5;28mself\u001b[39m.scaler = StandardScaler()\n\u001b[32m    164\u001b[39m     \u001b[38;5;28mself\u001b[39m.logger.info(\u001b[33m\"\u001b[39m\u001b[33mInitialized sklearn components\u001b[39m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[31mAttributeError\u001b[39m: 'PolicyLayerConfig' object has no attribute 'get'"
+     ]
+    }
+   ],
    "source": [
-    "# Initialize TIPM configuration\n",
-    "config = TIPMConfig(\n",
-    "    random_seed=42,\n",
-    "    confidence_threshold=0.7,\n",
-    "    max_prediction_horizon=12  # 12 months\n",
-    ")\n",
+    "# Initialize TIPMModel with existing config object\n",
     "\n",
-    "# Create TIPM model instance\n",
-    "model = TIPMModel(config)\n",
+    "try:\n",
+    "    model = TIPMModel(config)\n",
+    "except Exception as e:\n",
+    "    print(\"Failed to initialize TIPMModel:\", e)\n",
+    "    raise\n",
     "\n",
-    "print(f\"TIPM Model initialized with {len(model.config.__dict__)} configuration parameters\")\n",
+    "print(f\"TIPM Model initialized with {len(vars(model.config)) if hasattr(model, 'config') else 'unknown'} configuration parameters\")\n",
+    "print(f\"Model version: {config.model_version}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0261acd2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Failed to initialize TIPMModel: 'PolicyLayerConfig' object has no attribute 'get'\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'PolicyLayerConfig' object has no attribute 'get'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m\n",
+      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[9]\u001b[39m\u001b[32m, line 3\u001b[39m\n",
+      "\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# Initialize TIPMModel with config object\u001b[39;00m\n",
+      "\u001b[32m      2\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:\n",
+      "\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m     model = \u001b[43mTIPMModel\u001b[49m\u001b[43m(\u001b[49m\u001b[43mconfig\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[32m      4\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n",
+      "\u001b[32m      5\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mFailed to initialize TIPMModel:\u001b[39m\u001b[33m\"\u001b[39m, e)\n",
+      "\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/_TIPM/tipm/core.py:66\u001b[39m, in \u001b[36mTIPMModel.__init__\u001b[39m\u001b[34m(self, config)\u001b[39m\n",
+      "\u001b[32m     63\u001b[39m \u001b[38;5;28mself\u001b[39m.logger = logging.getLogger(\u001b[34m__name__\u001b[39m)\n",
+      "\u001b[32m     65\u001b[39m \u001b[38;5;66;03m# Initialize model layers\u001b[39;00m\n",
+      "\u001b[32m---> \u001b[39m\u001b[32m66\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_initialize_layers\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[32m     68\u001b[39m \u001b[38;5;66;03m# Model state\u001b[39;00m\n",
+      "\u001b[32m     69\u001b[39m \u001b[38;5;28mself\u001b[39m.is_trained = \u001b[38;5;28;01mFalse\u001b[39;00m\n",
+      "\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/_TIPM/tipm/core.py:74\u001b[39m, in \u001b[36mTIPMModel._initialize_layers\u001b[39m\u001b[34m(self)\u001b[39m\n",
+      "\u001b[32m     72\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34m_initialize_layers\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n",
+      "\u001b[32m     73\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33;03m\"\"\"Initialize all 6 model layers\"\"\"\u001b[39;00m\n",
+      "\u001b[32m---> \u001b[39m\u001b[32m74\u001b[39m     \u001b[38;5;28mself\u001b[39m.policy_layer = \u001b[43mPolicyTriggerLayer\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mconfig\u001b[49m\u001b[43m.\u001b[49m\u001b[43mpolicy_config\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[32m     75\u001b[39m     \u001b[38;5;28mself\u001b[39m.trade_flow_layer = TradeFlowLayer(\u001b[38;5;28mself\u001b[39m.config.trade_flow_config)\n",
+      "\u001b[32m     76\u001b[39m     \u001b[38;5;28mself\u001b[39m.industry_layer = IndustryResponseLayer(\u001b[38;5;28mself\u001b[39m.config.industry_config)\n",
+      "\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/_TIPM/tipm/layers/policy_trigger.py:84\u001b[39m, in \u001b[36mPolicyTriggerLayer.__init__\u001b[39m\u001b[34m(self, config)\u001b[39m\n",
+      "\u001b[32m     81\u001b[39m \u001b[38;5;28mself\u001b[39m.logger = \u001b[38;5;28mself\u001b[39m._setup_logging()\n",
+      "\u001b[32m     83\u001b[39m \u001b[38;5;66;03m# Initialize components with error handling\u001b[39;00m\n",
+      "\u001b[32m---> \u001b[39m\u001b[32m84\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_initialize_components\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[32m     86\u001b[39m \u001b[38;5;66;03m# State tracking\u001b[39;00m\n",
+      "\u001b[32m     87\u001b[39m \u001b[38;5;28mself\u001b[39m.is_fitted = \u001b[38;5;28;01mFalse\u001b[39;00m\n",
+      "\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/_TIPM/tipm/layers/policy_trigger.py:157\u001b[39m, in \u001b[36mPolicyTriggerLayer._initialize_components\u001b[39m\u001b[34m(self)\u001b[39m\n",
+      "\u001b[32m    154\u001b[39m \u001b[38;5;66;03m# Initialize TF-IDF vectorizer if sklearn available\u001b[39;00m\n",
+      "\u001b[32m    155\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m HAS_SKLEARN:\n",
+      "\u001b[32m    156\u001b[39m     \u001b[38;5;28mself\u001b[39m.tfidf_vectorizer = TfidfVectorizer(\n",
+      "\u001b[32m--> \u001b[39m\u001b[32m157\u001b[39m         max_features=\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mconfig\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget\u001b[49m(\u001b[33m\"\u001b[39m\u001b[33mtfidf_max_features\u001b[39m\u001b[33m\"\u001b[39m, \u001b[32m1000\u001b[39m),\n",
+      "\u001b[32m    158\u001b[39m         stop_words=\u001b[33m\"\u001b[39m\u001b[33menglish\u001b[39m\u001b[33m\"\u001b[39m,\n",
+      "\u001b[32m    159\u001b[39m         ngram_range=(\u001b[32m1\u001b[39m, \u001b[32m3\u001b[39m),\n",
+      "\u001b[32m    160\u001b[39m         lowercase=\u001b[38;5;28;01mTrue\u001b[39;00m,\n",
+      "\u001b[32m    161\u001b[39m         strip_accents=\u001b[33m\"\u001b[39m\u001b[33municode\u001b[39m\u001b[33m\"\u001b[39m,\n",
+      "\u001b[32m    162\u001b[39m     )\n",
+      "\u001b[32m    163\u001b[39m     \u001b[38;5;28mself\u001b[39m.scaler = StandardScaler()\n",
+      "\u001b[32m    164\u001b[39m     \u001b[38;5;28mself\u001b[39m.logger.info(\u001b[33m\"\u001b[39m\u001b[33mInitialized sklearn components\u001b[39m\u001b[33m\"\u001b[39m)\n",
+      "\n",
+      "\u001b[31mAttributeError\u001b[39m: 'PolicyLayerConfig' object has no attribute 'get'"
+     ]
+    }
+   ],
+   "source": [
+    "# Initialize TIPMModel with config object\n",
+    "try:\n",
+    "    model = TIPMModel(config)\n",
+    "except Exception as e:\n",
+    "    print(\"Failed to initialize TIPMModel:\", e)\n",
+    "    raise\n",
+    "\n",
+    "print(f\"TIPM Model initialized with {len(vars(model.config)) if hasattr(model, 'config') else 'unknown'} configuration parameters\")\n",
     "print(f\"Model version: {config.model_version}\")"
    ]
   },
@@ -111,10 +217,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "648a7b12",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generating sample policy data...\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'data_loader' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[33]\u001b[39m\u001b[32m, line 8\u001b[39m\n\u001b[32m      5\u001b[39m end_date = datetime(\u001b[32m2023\u001b[39m, \u001b[32m12\u001b[39m, \u001b[32m31\u001b[39m)\n\u001b[32m      7\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mGenerating sample policy data...\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m----> \u001b[39m\u001b[32m8\u001b[39m policy_data = \u001b[43mdata_loader\u001b[49m.load_policy_data((start_date, end_date))\n\u001b[32m     10\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mGenerated \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mlen\u001b[39m(policy_data)\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m policy announcements\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m     12\u001b[39m \u001b[38;5;66;03m# Display sample policies\u001b[39;00m\n",
+      "\u001b[31mNameError\u001b[39m: name 'data_loader' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# Generate sample policy data\n",
     "from datetime import datetime, timedelta\n",
@@ -585,8 +710,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": ".venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
